<resources>
    <string name="app_name">VGWRandomizer</string>
    <string name="message">VIKINGS GONE WILD THE BOARD GAME RANDOMIZER</string>
    <string name="randomize">RANDOMIZE</string>
    <string name="type_of_game">Type of Game:</string>
    <string name="re_randomize">RE-RANDOMIZE</string>
    <string name="restart">RESTART</string>
    <string name="buildings">Buildings:</string>
    <string name="factories_ncontaners">factories contaners . .</string>
    <string name="randomized">RANDOMIZED:</string>
    <string name="defences">Defenses:</string>
    <string name="sheep_cannon_cannon">sheep Cannon, cannon . .</string>
    <string name="units">Units:</string>
    <string name="bone_crushers_elf_archers">Bone crushers, elf archers. . .</string>
    <string name="cards_you_need">Cards You Need:</string>
    <string name="cards_to_take_out">Cards to Take Out:</string>
    <string name="other_notes">Other Notes:</string>
    <string name="stuff">Comings Soon!!</string>
    <string name="missons">Missons:</string>
    <string name="odin_s_path">Odin\'s Path:</string>
    <string name="end_game_bonuses">End Game Bonuses:</string>
    <string name="game_mode">Game Mode: Player vs. Player</string>
    <string name="randomizer_smartness">Randomizer Smartness:</string>
    <string name="extras">Number Of Players: 4 Players</string>
    <string name="_5th_player">5th Player</string>
    <string name="base_set">Base Set</string>
    <string name="expansions">Expansions:</string>
    <string name="guild_wars">Guild Wars</string>
    <string name="it_s_a_kind_of_magic">It\'s a Kind of Magic</string>
    <string name="kickstarter">KickStarter</string>
    <string name="ragnorok">Ragnarok</string>
    <string name="settings">SETTINGS</string>
    <string name="save">SAVE</string>
    <string name="use_spells_instead_of_defences">Use Spells instead of Defenses</string>
    <string name="always_use_breweries_and_gold_factories">Always Use Breweries and Gold Factories</string>
    <string name="others">Others:</string>
    <string name="number_of_cards">Number Of Cards:</string>
    <string name="number_of_buildings">Number of Buildings: 6</string>
    <string name="number_of_units">Number of Units: 3</string>
    <string name="number_of_defences_spells">Number of Defenses: 3</string>
    <string name="number_of_spells">Number Of Spells:</string>
    <string name="number_of_defenses_3">Number of Defenses: 3</string>
    <string name="close">CLOSE</string>
    <string name="textview">TextView</string>
    <string name="help">HELP</string>
    <string name="helpy">HELP</string>
    <string name="HelpText"></string>
</resources>
