<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <ProgressBar
            android:id="@+id/progressBar6"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="990dp"
            android:layout_height="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:max="1"
            android:progress="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="380dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expansions"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/BaseSet"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/base_set" />

            <CheckBox
                android:id="@+id/GuildWars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/guild_wars"
                tools:onClick="onCheckboxClickedSettings" />

            <CheckBox
                android:id="@+id/ItsAKindOfMagic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/it_s_a_kind_of_magic" />

            <CheckBox
                android:id="@+id/Ragnorok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/ragnorok" />

            <CheckBox
                android:id="@+id/KickStarter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/kickstarter" />

            <CheckBox
                android:id="@+id/fifthPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/_5th_player" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_cards"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NumOfBuildText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_buildings"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/NumOfBuildings"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="12"
                android:progress="6" />

            <TextView
                android:id="@+id/NumOfUnitText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_units"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/NumOfUnits"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="6"
                android:progress="3" />

            <TextView
                android:id="@+id/NumOfDSText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_defenses_3"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/NumOfDefenceSpells"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="3" />

            <TextView
                android:id="@+id/NumberOfSpellsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_spells"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/NumOfSpells"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="6"
                android:progress="3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/BrewAndGold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClickedSettings"
                android:text="@string/always_use_breweries_and_gold_factories" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/SAVE"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="-45dp"
            android:text="@string/save"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <Button
            android:id="@+id/CryOfHelp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>