<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rerandomize"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/re_randomize"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/restart"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restart"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/randomized"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="10000dp"
        android:layout_height="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="1"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        tools:ignore="RtlHardcoded" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="375dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_mode"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="100000dp"
                android:layout_height="5dp"
                android:max="1"
                android:progress="1" />

            <TextView
                android:id="@+id/cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cards_you_need"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/buildingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buildings"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/buildingsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/factories_ncontaners"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/defencesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defences"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/defencesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sheep_cannon_cannon"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/unitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/unitsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bone_crushers_elf_archers"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/endGameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_game_bonuses"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/endGameList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stuff"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_notes"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/noteList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stuff"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />
            <!--
                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="1"
                            android:progress="1" />

                        <TextView
                            android:id="@+id/cardsToTakeOut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cards_to_take_out"
                            android:textColor="@android:color/black"
                            android:textSize="32sp" />

                        <TextView
                            android:id="@+id/odinTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/odin_s_path"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/odinList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stuff"
                            android:textColor="?android:attr/colorForeground"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/MissonTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/missons"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/missionList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stuff"
                            android:textColor="?android:attr/colorForeground"
                            android:textSize="18sp" />
                        -->
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>